Test Smart Proxy Ansible in Jenkins

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/smart-proxy-plugin.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/smart-proxy-plugin.yaml
@@ -41,6 +41,7 @@
 - project:
     name: smart-proxy-plugin
     plugin:
+      - ansible
       - dhcp_infoblox
       - dhcp_remote_isc
       - dns_infoblox
