--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/smart-proxy-plugin-pull-request.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/smart-proxy-plugin-pull-request.yaml
@@ -40,6 +40,7 @@
 - project:
     name: smart-proxy-plugin-pull-request
     plugin:
+      - ansible
       - dhcp_infoblox
       - dhcp_remote_isc
       - dns_infoblox
