--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/pulpcore-packaging-rpm-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/pulpcore-packaging-rpm-release.yaml
@@ -11,7 +11,7 @@
         - github
     dsl:
       !include-raw:
-        - 'pipelines/vars/pulpcore/{version}.groovy'
+        - 'pipelines/vars/pulpcore/version.groovy'
         - 'pipelines/release/pulpcore_packaging_release.groovy{empty}'
         - 'pipelines/lib/git.groovy{empty}'
         - 'pipelines/lib/ansible.groovy{empty}'
