also add nightly plugins pipeline

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/foreman-release-pipelines.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/foreman-release-pipelines.yaml
@@ -80,6 +80,7 @@
     jobs:
       - 'foreman-client-{version}-rpm-pipeline'
       - 'foreman-plugins-{version}-rpm-pipeline'
+      - 'foreman-plugins-{version}-test-pipeline'
     empty: ''
     version:
       - 'nightly'
