--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/pulpcore-release-pipelines.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/pulpcore-release-pipelines.yaml
@@ -21,6 +21,4 @@
       - 'pulpcore-{version}-rpm-pipeline'
     empty: ''
     version:
-      - '3.7'
-      - '3.8'
-      - '3.9'
+      !include: ../../includes/pulpcore_versions.yaml.inc
