--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/pulpcore-packaging-rpm-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/pulpcore-packaging-rpm-release.yaml
@@ -25,6 +25,4 @@
       - 'pulpcore-packaging-rpm-{version}-release'
     empty: ''
     version:
-      - '3.7'
-      - '3.8'
-      - '3.9'
+      !include: ../../includes/pulpcore_versions.yaml.inc
