--- a/puppet/Rakefile
+++ b/puppet/Rakefile
@@ -12,6 +12,7 @@ require 'puppet-lint/tasks/puppet-lint'
 PuppetLint::RakeTask.new :lint do |config|
   config.pattern = PuppetSyntax.manifests_paths
   config.ignore_paths = ['modules/exim/**/*.pp']
+  config.fail_on_warnings = true
 end
 
 task :test => [:syntax, :lint, :spec]
