Add flattened Ruby 2.7 dedicated repository for EL8

--- a/koji/vars/external_repos.yml
+++ b/koji/vars/external_repos.yml
@@ -90,3 +90,5 @@ external_repos:
     url: file:///mnt/koji/external-repos/www/qpidcopr-$arch/RPMS.qpid/
   - name: epel7
     url: https://dl.fedoraproject.org/pub/epel/7/$arch/
+  - name: flat-ruby27-el8
+    url: http://koji.katello.org/kojifiles/releases/split/yum/koji-modules/koji/staged/x86_64/RHEL-8-001-mod/ruby:2.7/
