--- a/koji/vars/external_repos.yml
+++ b/koji/vars/external_repos.yml
@@ -42,12 +42,8 @@ external_repos:
     url: file:///mnt/koji/external-repos/www/centos7-$arch/RPMS.updates/
   - name: foreman-rails-1.19-rhel-7
     url: file:///mnt/koji/external-repos/www/foreman-rails-1.19-$arch/RPMS.ror51/
-  - name: puppetlabs-puppet5-rhel-7
-    url: file:///mnt/koji/external-repos/www/puppetlabs7-$arch/RPMS.puppet5/
   - name: fedora-29-updates
     url: http://koji.katello.org/kojifiles/external-repos/www/fedora29-$arch/RPMS.updates/
-  - name: puppetlabs-puppet6-rhel-7
-    url: file:///mnt/koji/external-repos/www/puppetlabs7-$arch/RPMS.puppet6/
   - name: centos7-os
     url: http://mirror.centos.org/centos/7/os/x86_64/
   - name: centos8-baseos
@@ -70,8 +66,6 @@ external_repos:
     url: http://mirror.centos.org/centos/8/configmanagement/$arch/ansible-29/
   - name: foreman-rails-1.18-rhel-7
     url: file:///mnt/koji/external-repos/www/foreman-rails-1.18-$arch/RPMS.ror51/
-  - name: puppetlabs-puppet6-rhel-8
-    url: http://yum.puppetlabs.com/puppet6/el/8/x86_64/
   - name: centos-sclo-sclo-rhel-6
     url: https://vault.centos.org/centos/6/sclo/$arch/sclo/
   - name: centos8-powertools
@@ -80,12 +74,6 @@ external_repos:
     url: file:///mnt/koji/external-repos/www/foreman-rails-1.17-$arch/RPMS.ror51/
   - name: centos-sclo-sclo-rhel-7
     url: http://mirror.centos.org/centos/7/sclo/$arch/sclo/
-  - name: puppetlabs-prod-rhel-6
-    url: file:///mnt/koji/external-repos/www/puppetlabs6-$arch/RPMS.products/
-  - name: puppetlabs-deps-rhel-6
-    url: file:///mnt/koji/external-repos/www/puppetlabs6-$arch/RPMS.dependencies/
-  - name: puppetlabs-pc1-rhel-7
-    url: file:///mnt/koji/external-repos/www/puppetlabs7-$arch/RPMS.pc1/
   - name: qpid-copr
     url: file:///mnt/koji/external-repos/www/qpidcopr-$arch/RPMS.qpid/
   - name: epel7
@@ -93,4 +81,17 @@ external_repos:
   - name: flat-ruby27-el8
     url: http://koji.katello.org/kojifiles/releases/split/yum/koji-modules/koji/staged/x86_64/RHEL-8-001-mod/ruby:2.7/
   - name: flat-perl26-el8
-    url: http://koji.katello.org/kojifiles/releases/split/yum/koji-modules/koji/staged/x86_64/RHEL-8-001-mod/perl:5.26/ 
+    url: http://koji.katello.org/kojifiles/releases/split/yum/koji-modules/koji/staged/x86_64/RHEL-8-001-mod/perl:5.26/
+  # Puppet repositories
+  - name: puppetlabs-puppet6-rhel-8
+    url: http://yum.puppetlabs.com/puppet6/el/8/x86_64/
+  - name: puppetlabs-puppet6-rhel-7
+    url: file:///mnt/koji/external-repos/www/puppetlabs7-$arch/RPMS.puppet6/
+  - name: puppetlabs-prod-rhel-6
+    url: file:///mnt/koji/external-repos/www/puppetlabs6-$arch/RPMS.products/
+  - name: puppetlabs-deps-rhel-6
+    url: file:///mnt/koji/external-repos/www/puppetlabs6-$arch/RPMS.dependencies/
+  - name: puppetlabs-pc1-rhel-7
+    url: file:///mnt/koji/external-repos/www/puppetlabs7-$arch/RPMS.pc1/
+  - name: puppetlabs-puppet5-rhel-7
+    url: file:///mnt/koji/external-repos/www/puppetlabs7-$arch/RPMS.puppet5/
