--- a/koji/vars/external_repos.yml
+++ b/koji/vars/external_repos.yml
@@ -87,3 +87,7 @@ external_repos:
     url: http://yum.puppet.com/puppet6/el/8/x86_64/
   - name: puppetlabs-puppet6-rhel-7
     url: http://yum.puppet.com/puppet6/el/7/x86_64/
+  - name: puppetlabs-puppet7-rhel-8
+    url: http://yum.puppet.com/puppet7/el/8/x86_64/
+  - name: puppetlabs-puppet7-rhel-7
+    url: http://yum.puppet.com/puppet7/el/7/x86_64/
