Add el8 module repos
This will help enable a more controlled centos 8 build environment

--- a/koji/vars/external_repos.yml
+++ b/koji/vars/external_repos.yml
@@ -37,6 +37,18 @@ external_repos:
     url: http://koji.katello.org/kojifiles/releases/split/yum/koji-modules/koji/staged/x86_64/RHEL-8-001-mod/ruby:2.7/
   - name: flat-perl26-el8
     url: http://koji.katello.org/kojifiles/releases/split/yum/koji-modules/koji/staged/x86_64/RHEL-8-001-mod/perl:5.26/
+  - name: flat-base-el8
+    url: http://koji.katello.org/kojifiles/releases/split/yum/koji-modules/koji/staged/x86_64/RHEL-8-001-mod/non_modular/
+  - name: flat-ruby25-el8
+    url: http://koji.katello.org/kojifiles/releases/split/yum/koji-modules/koji/staged/x86_64/RHEL-8-001-mod/ruby:2.5/
+  - name: flat-python36-el8
+    url: http://koji.katello.org/kojifiles/releases/split/yum/koji-modules/koji/staged/x86_64/RHEL-8-001-mod/python36:3.6/
+  - name: flat-python36-devel-el8
+    url: http://koji.katello.org/kojifiles/releases/split/yum/koji-modules/koji/staged/x86_64/RHEL-8-001-mod/python36-devel:3.6/
+  - name: flat-python38-el8
+    url: http://koji.katello.org/kojifiles/releases/split/yum/koji-modules/koji/staged/x86_64/RHEL-8-001-mod/python38:3.8/
+  - name: flat-python38-devel-el8
+    url: http://koji.katello.org/kojifiles/releases/split/yum/koji-modules/koji/staged/x86_64/RHEL-8-001-mod/python38-devel:3.8/
   # Fedora repositories
   - name: fedora-29
     url: https://dl.fedoraproject.org/pub/archive/fedora/linux/releases/29/Everything/x86_64/os/
