move augeas_core to test_modules

--- a/.gitmodules
+++ b/.gitmodules
@@ -26,3 +26,6 @@
 [submodule "puppet/test_modules/selinux_core"]
 	path = puppet/test_modules/selinux_core
 	url = https://github.com/puppetlabs/puppetlabs-selinux_core
+[submodule "puppet/test_modules/augeas_core"]
+	path = puppet/test_modules/augeas_core
+	url = https://github.com/puppetlabs/puppetlabs-augeas_core
